--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "next",
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.11",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
